# SWI

./: .gitignore  .pre-commit-config.yaml  README.md  _1_preprocessing_spectral_run.py  _1_preprocessing_spectral_run_no_mpi.py  _2_inversion_run.py  _3_postprocessing_run.py  pyproject.toml  requirements_for_linux.txt  requirements_for_windows.txt  ruff.toml  tox.ini
configs/das/: dc_limits.csv  main.yaml  vp_model.csv  vs_limits.csv
configs/synth_2d/: dc_limits.csv  main.yaml  vp_model.csv
packages_for_linux/: contourpy-1.3.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  debugpy-1.8.14-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  disba-0.6.1-py3-none-any.whl  ipython-8.35.0-py3-none-any.whl  kiwisolver-1.4.8-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl  numba-0.61.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  pydantic_core-2.23.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyzmq-26.4.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  segyio-1.9.12-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  stockwell-1.1.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
packages_for_windows/: PyYAML-6.0.2-cp310-cp310-win_amd64.whl  fonttools-4.57.0-cp310-cp310-win_amd64.whl  ipywidgets-8.1.5-py3-none-any.whl  mpi4py-4.0.3-cp310-cp310-win_amd64.whl  pillow-11.2.1-cp310-cp310-win_amd64.whl  segyio-1.9.12-cp310-cp310-win_amd64.whl  stockwell-1.1.2-cp310-cp310-win_amd64.whl  tornado-6.4.2-cp38-abi3-win_amd64.whl
src/: __init__.py
src/config_reader/: enums.py  load_params.py  models.py  utils.py
src/files_processor/: readers.py  savers.py
src/inversion/: computer_dc.py  getranges.py  optimizer_processor.py  utils.py
src/logs/: Message.py  utils.py
src/postprocessing/: model2dplotter.py  utils.py  (+2 more)
(+110 files in other folders)
